--- a/photos/templates/photo_index.html
+++ b/photos/templates/photo_index.html
@@ -10,7 +10,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ photo.title }}</h5>
                 <p class="card-text">{{ photo.description }}</p>
-                <a href="{% url 'photo_detail' photo.pk %}"
+                <a href="{% url 'photo_details' photo.pk %}"
                    class="btn btn-primary">
                     Read More
                 </a>
