--- a/photos/templates/photo_index.html
+++ b/photos/templates/photo_index.html
@@ -2,19 +2,20 @@
 {% load static %}
 {% block page_content %}
 <h1>Current Photos</h1>
+
 <div class="row">
-{% for photo in photos %}
+    {% for photo in photos %}
     <div class="col-md-4">
-        <div class="card mb-2">
-            <img class="card-img-top" src="{% static photo.image %}">
+        <div class="card" style="width: 18rem; height: 20rem;">
+            <img class="card-img-top" src="{% static photo.image %}" style="height: 10rem;">
             <div class="card-body">
                 <h5 class="card-title">{{ photo.title }}</h5>
                 <p class="card-text">{{ photo.description }}</p>
-                <a href="{% url 'photo_details' photo.pk %}"
-                   class="btn btn-primary">
-                    Read More
-                </a>
+
             </div>
+            <a href="{% url 'photo_details' photo.pk %}" class="btn btn-primary" style="align-items: center;">
+                Read More
+            </a>
         </div>
     </div>
     {% endfor %}
